[gd_scene load_steps=5 format=3 uid="uid://df5coc2dhkjsd"]

[ext_resource type="Script" path="res://Scripts/musician_minigame.gd" id="1_bv4sn"]
[ext_resource type="AudioStream" uid="uid://dcokrgjcecahk" path="res://Resources/dokrajeawbarn.mp3" id="1_t3st2"]
[ext_resource type="LabelSettings" uid="uid://dpfy28ohntv0v" path="res://Resources/fonts_styles/sty2.tres" id="2_k0gsj"]

[sub_resource type="LabelSettings" id="LabelSettings_tmslv"]
font_size = 96

[node name="RhythmMinigame" type="CanvasLayer"]
script = ExtResource("1_bv4sn")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 0.396078)

[node name="StartPanel" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(500, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="StartPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -33.0
offset_right = 76.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="StartPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "เล่นกีตาร์ตามจังหวะ"
label_settings = ExtResource("2_k0gsj")
horizontal_alignment = 1

[node name="StartLabel" type="Label" parent="StartPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.818438, 0.750097, 0.0225837, 1)
text = "กด SPACE เพื่อเริ่มเกม
"
label_settings = ExtResource("2_k0gsj")
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_tmslv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamePanel" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(450, 120)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 40.0
offset_right = 225.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="GamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -38.5
offset_right = 74.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "กด spacebar เพื่อเคาะจังหวะให้ถูก!"
label_settings = ExtResource("2_k0gsj")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "คะแนน: 0"
label_settings = ExtResource("2_k0gsj")
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Combo: 0"
label_settings = ExtResource("2_k0gsj")
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_t3st2")
volume_db = -15.0
bus = &"SFX"

[node name="NoteSpawner" type="Node2D" parent="."]

[node name="NoteContainer" type="Node2D" parent="NoteSpawner"]

[node name="HitZone" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -328.0
offset_right = 286.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.66, 0.176, 0)
